--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ssss</title>
-  </head>
+  <script defer src="main.js"></script></head>
   <body>
     <button onclick="newAccount()">newAccount</button>
     <br />
@@ -54,10 +54,9 @@
         console.log(3333);
         const a = await window.account.substrate.transfer(
           "album vault error twenty dream initial unaware assume burger insane insect orbit",
-          "1CCfi6sM3jD7iV4Ng1b9CutkmcAKdqJG8P2jhQBgAL9qMKP",
+          "s74eC9H8QUnQC1Vvo6B3E1nBCPJGSjUgJv4k6M8x8wfDmVL",
           "0.1",
           "3000",
-          0,
           "wss://westend-rpc.polkadot.io/"
         );
         //       mnemonic: string,
